<!--
  ~  Copyright (c) 2017 Otávio Santana and others
  ~   All rights reserved. This program and the accompanying materials
  ~   are made available under the terms of the Eclipse Public License v1.0
  ~   and Apache License v2.0 which accompanies this distribution.
  ~   The Eclipse Public License is available at http://www.eclipse.org/legal/epl-v10.html
  ~   and the Apache License v2.0 is available at http://www.opensource.org/licenses/apache2.0.php.
  ~
  ~   You may elect to redistribute this code under either of these licenses.
  ~
  ~   Contributors:
  ~
  ~   Otavio Santana
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
         <groupId>com.otaviojava</groupId>
         <artifactId>parent</artifactId>
         <version>1.0.0</version>
    </parent>

    <artifactId>static-processor</artifactId>
    <packaging>jar</packaging>

    <properties>
    </properties>

    <dependencies>
        <dependency>
            <groupId>jakarta.nosql</groupId>
            <artifactId>nosql-core</artifactId>
            <version>${jakarta.nosql.version}</version>
        </dependency>
        <dependency>
            <groupId>org.eclipse.jnosql.mapping</groupId>
            <artifactId>jnosql-mapping-key-value</artifactId>
            <version>1.0.2</version>
        </dependency>
        <dependency>
            <groupId>jakarta.data</groupId>
            <artifactId>jakarta-data-api</artifactId>
            <version>1.0.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>com.github.spullara.mustache.java</groupId>
            <artifactId>compiler</artifactId>
            <version>0.9.10</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compile.version}</version>
                <configuration>
                    <compilerArgument>-proc:none</compilerArgument>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
